Fixed word wrap, added readme screenshot

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -127,6 +127,7 @@
         p {
           font-style: italic;
           margin: 10px 0;
+          word-wrap: break-word;
         }
       }
     }
