--- a/app/assets/stylesheets/spot_show.scss
+++ b/app/assets/stylesheets/spot_show.scss
@@ -95,6 +95,7 @@
             padding: 24px 20px;
             border: 1px solid $lightgrey;
             border-radius: 4px;
+            word-wrap: break-word;
           }
         }
       }
